--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
 
       - name: install
         uses: actions/setup-node@v3
+      - name: npm install
         run: npm install
+      - name: runTest
         run: npm run test:unit
 
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
