--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
         uses: actions/setup-node@v3
       - name: npm ci
         run: npm ci
-      - name: runTest
-        run: npm run test:unit
+      - name: runbuild
+        run: npm run build
 
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
