--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,5 +83,5 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          push: true
+          push: false
           tags: user/app:latest
